// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`parsing named attribute 1`] = `
AttributeNode {
  "isHidden": false,
  "name": "foo",
}
`;

exports[`parsing valued attribute 1`] = `
AttributeNode {
  "isHidden": false,
  "name": "a",
  "value": StringAttributeValue {
    "value": "b",
  },
}
`;
